Some initial changes.